Exercise 12 starting point

--- a/app/templates/components/post-comment.hbs
+++ b/app/templates/components/post-comment.hbs
@@ -3,7 +3,7 @@
 </p>
 
 <span class="delete-indicator"
-      onClick={{this.attrs.delete-comment}}>
+      onClick={{this.delete-comment}}>
 </span>
 
 {{#if model.updatedAt}}
