--- a/app/templates/components/post-full.hbs
+++ b/app/templates/components/post-full.hbs
@@ -43,7 +43,8 @@
 {{#each model.comments as |comment|}}
   {{post-comment
     model=comment
-    delete-comment=(action 'deleteComment' comment) }}
+    disabled=deleteComment.isRunning
+    delete-comment=(perform deleteComment comment) }}
 {{else}}
   <p class="no-comments">
     No comments yet
@@ -57,7 +58,8 @@
 {{/liquid-if}}
 <div class="post-actions">
   <button class='btn'
-    onClick={{action this.save-comment model postInfo}}>
+    disabled={{save-comment.isRunning}}
+    onClick={{perform save-comment model postInfo}}>
     Reply
   </button>
 </div>
