--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -9,5 +9,11 @@
       {{/unless}}
     </div>
 </nav>
+
+<p>
+
+  {{location.latitude}}, {{location.longitude}}
+</p>
+
 {{req.userAgent}}
 {{outlet}}
