--- a/app/templates/components/post-full.hbs
+++ b/app/templates/components/post-full.hbs
@@ -1,3 +1,4 @@
+
 <div class="title-row">
   <img src={{model.authorPhotoUrl}} alt={{authorName}} class="author-portrait">
   <h1 class='post-title'>{{titleize model.title}}</h1>
@@ -42,14 +43,17 @@
 
 {{#each model.comments as |comment|}}
   {{post-comment
-    model=comment}}
+    model=comment
+    delete-comment=(action 'deleteComment' comment)
+    }}
 {{else}}
   <p class="no-comments">
     No comments yet
   </p>
 {{/each}}
-{{x-textarea class='reply-field'}}
+{{x-textarea value=commentDraft.body class='reply-field'}}
 
 <div class="post-actions">
-  <button class='btn'>Reply</button>
+  <button class='btn'
+    onClick={{action save-comment model commentDraft}}>Reply</button>
 </div>
