--- a/app/templates/posts.hbs
+++ b/app/templates/posts.hbs
@@ -1,10 +1,16 @@
 <div class="posts-index">
   <div class="posts-left">
     <div class="posts-left-search">
+ 
+ 
       <input
         class='posts-search-field'
         type='search'
+        value={{search}}
+        onkeyup={{action searchUpdated value='target.value'}}
         placeholder='🔎 Search'/>
+ 
+ 
     </div>
     <div class="posts-left-content">
       <div class="posts-left-content-pane">
