--- a/app/templates/posts/show.hbs
+++ b/app/templates/posts/show.hbs
@@ -1,3 +1,4 @@
 {{post-full model=model
-  save-comment=(action 'saveComment')
+  saveCommentTask=saveCommentTask
 }}
+  {{!-- save-comment=(perform saveComment) --}}
