--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -12,7 +12,7 @@
 
 <p>
 
-  {{location.latitude}}, {{location.longitude}}
+  {{!-- {{location.latitude}}, {{location.longitude}} --}}
 </p>
 
 {{req.userAgent}}
