--- a/app/templates/components/x-simple-card.hbs
+++ b/app/templates/components/x-simple-card.hbs
@@ -1,8 +1,12 @@
 <h4>{{cardApi.title}}</h4>
 <div class="body">
-   {{yield (hash
-    ui=(hash
-      footer=(component '-x-card-footer' title=cardApi.title)
-    )
+   {{yield (
+     hash
+      ui=(
+        hash
+        footer=(component '-x-card-footer' title=cardApi.title)
+      )
    )}}
+   {{-x-card-footer}}
+   {{component '-x-card-footer'}}
 </div>
