--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,6 +1,7 @@
 <nav class="navbar">
   {{link-to 'Comment.ly' 'posts.index' classNames='brand'}}
     <div class="pull-right">
+      {{loc.lat}}, {{loc.lng}}
       {{currentUser.email}}
       {{#unless (is-authenticated)}}
         {{link-to 'Login' 'auth.login' class='btn'}}
