--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -56,6 +56,7 @@ body {
     width: 100%;
     border-radius: 5px;
     background: white;
+    color: black;
     padding: 5px;
     border: 1px solid #999;
     height: 40px;
