--- a/app/templates/components/post-full.hbs
+++ b/app/templates/components/post-full.hbs
@@ -48,7 +48,8 @@
     No comments yet
   </p>
 {{/each}}
-{{x-textarea class='reply-field'}}
+
+{{x-textarea value=draft.body class='reply-field'}}
 
 <div class="post-actions">
   <button class='btn'>Reply</button>
