--- a/app/templates/components/post-comment.hbs
+++ b/app/templates/components/post-comment.hbs
@@ -2,9 +2,9 @@
   {{model.body}}
 </p>
 
-<span class="delete-indicator"
-      onClick={{this.attrs.delete-comment}}>
-</span>
+<button class="delete-indicator"
+      onClick={{delete-comment}}>
+</button>
 
 {{#if model.updatedAt}}
   <span class="posted-at">
