--- a/app/templates/components/post-full.hbs
+++ b/app/templates/components/post-full.hbs
@@ -42,6 +42,7 @@
 
 {{#each model.comments as |comment|}}
   {{post-comment
+    delete-comment=(action 'onDeleteComment' comment)
     model=comment}}
 {{else}}
   <p class="no-comments">
@@ -52,5 +53,8 @@
 {{x-textarea value=draft.body class='reply-field'}}
 
 <div class="post-actions">
-  <button class='btn'>Reply</button>
+  <button class='btn'
+    onClick={{action save-comment model draft}}>
+    Reply
+  </button>
 </div>
